# Copyright 2026 The Fuchsia Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@fuchsia_build_info//:args.bzl", "build_info_version")
load(
    "@rules_fuchsia//fuchsia:assembly.bzl",
    "BUILD_TYPES",
    "INPUT_DEVICE_TYPE",
    "fuchsia_elf_sizes",
    "fuchsia_product",
    "fuchsia_product_bundle",
    "fuchsia_product_configuration",
    "fuchsia_product_size_check",
    "fuchsia_size_report_aggregator",
)
load("//build/info:info.bzl", "DEFAULT_PRODUCT_BUILD_INFO")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

PLATFORM_BASE = {
    "build_type": BUILD_TYPES.ENG,
    "kernel": {
        "scheduler_enable_new_wakeup_accounting": True,
    },
    "bluetooth": {
        "type": "standard",
        "snoop": "lazy",
    },
    "development_support": {
        "include_sl4f": True,
        "tools": {
            "audio": {
                "driver_tools": True,
                "full_stack_tools": True,
            },
            "connectivity": {
                "enable_networking": True,
                "enable_wlan": True,
                "enable_thread": True,
            },
        },
    },
    "fonts": {
        "font_collection": "small-open-fonts-collection",
    },
    "media": {
        "audio": {
            "full_stack": {
            },
        },
        "enable_codecs": True,
        "enable_sessions": True,
    },
    "power": {
        "enable_non_hermetic_testing": True,
    },
    "ui": {
        "supported_input_devices": [
            INPUT_DEVICE_TYPE.BUTTON,
            INPUT_DEVICE_TYPE.TOUCHSCREEN,
        ],
    },
}

BASE_PACKAGES = [
    "//src/fonts/asset_providers:small-open-fonts-collection",
]

CACHE_PACKAGES = [
    "//src/chromium:web_engine",
]

PRODUCT_BASE = {
    "build_info": DEFAULT_PRODUCT_BUILD_INFO | {
        "name": "minimal",
    },
}

fuchsia_product_configuration(
    name = "product_config",
    base_packages = BASE_PACKAGES,
    cache_packages = CACHE_PACKAGES,
    product_config_json = {
        "platform": PLATFORM_BASE,
        "product": PRODUCT_BASE,
    },
    version = build_info_version,
)

# x64
fuchsia_product(
    name = "image.x64",
    board_config = "//boards:x64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_eng",
    product_config = ":product_config",
)

fuchsia_elf_sizes(
    name = "elf_sizes.x64",
    product = ":image.x64",
)

fuchsia_product_size_check(
    name = "size_limits.x64",
    blobfs_creep_limit = 102400,
    platform_resources_budget = 8013047,
    product_image = ":image.x64",
)

fuchsia_product_bundle(
    name = "product_bundle.x64",
    default_virtual_device = "//build/bazel/assembly/virtual_devices:x64-emu-recommended",
    main = ":image.x64",
    product_bundle_name = "core.x64",
    recovery = "//products/zedboot:x64",
    repository_keys = "//src/sys/pkg/repositories/devhost/keys",
    update_epoch = "1",
    virtual_devices = [
        "//build/bazel/assembly/virtual_devices:x64-emu-recommended",
        "//build/bazel/assembly/virtual_devices:x64-emu-min",
        "//build/bazel/assembly/virtual_devices:x64-emu-extra-large",
    ],
)

# x64-reduced-perf-variation
fuchsia_product(
    name = "image.x64_reduced_perf_variation",
    board_config = "//boards:x64_reduced_perf_variation",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_eng",
    product_config = ":product_config",
)

fuchsia_elf_sizes(
    name = "elf_sizes.x64_reduced_perf_variation",
    product = ":image.x64_reduced_perf_variation",
)

fuchsia_product_bundle(
    name = "product_bundle.x64_reduced_perf_variation",
    default_virtual_device = "//build/bazel/assembly/virtual_devices:x64-emu-recommended",
    main = ":image.x64_reduced_perf_variation",
    product_bundle_name = "core.x64-reduced-perf-variation",
    recovery = "//products/zedboot:x64_reduced_perf_variation",
    repository_keys = "//src/sys/pkg/repositories/devhost/keys",
    update_epoch = "1",
    virtual_devices = [
        "//build/bazel/assembly/virtual_devices:x64-emu-recommended",
        "//build/bazel/assembly/virtual_devices:x64-emu-min",
        "//build/bazel/assembly/virtual_devices:x64-emu-extra-large",
    ],
)

# arm64
fuchsia_product(
    name = "image.arm64",
    board_config = "//boards:arm64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_eng",
    product_config = ":product_config",
)

fuchsia_elf_sizes(
    name = "elf_sizes.arm64",
    product = ":image.arm64",
)

fuchsia_product_size_check(
    name = "size_limits.arm64",
    blobfs_creep_limit = 102400,
    platform_resources_budget = 8013047,
    product_image = ":image.arm64",
)

fuchsia_product_bundle(
    name = "product_bundle.arm64",
    default_virtual_device = "//build/bazel/assembly/virtual_devices:arm64-emu-recommended",
    main = ":image.arm64",
    product_bundle_name = "core.arm64",
    recovery = "//products/zedboot:arm64",
    repository_keys = "//src/sys/pkg/repositories/devhost/keys",
    update_epoch = "1",
    virtual_devices = [
        "//build/bazel/assembly/virtual_devices:arm64-emu-recommended",
        "//build/bazel/assembly/virtual_devices:arm64-emu-min",
        "//build/bazel/assembly/virtual_devices:arm64-emu-extra-large",
    ],
)

# qemu-arm64
fuchsia_product(
    name = "image.qemu-arm64",
    board_config = "//boards:qemu-arm64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_eng",
    product_config = ":product_config",
)

fuchsia_elf_sizes(
    name = "elf_sizes.qemu-arm64",
    product = ":image.qemu-arm64",
)

fuchsia_product_bundle(
    name = "product_bundle.qemu-arm64",
    default_virtual_device = "//build/bazel/assembly/virtual_devices:arm64-emu-recommended",
    main = ":image.qemu-arm64",
    product_bundle_name = "core.qemu-arm64",
    recovery = "//products/zedboot:qemu-arm64",
    repository_keys = "//src/sys/pkg/repositories/devhost/keys",
    update_epoch = "1",
    virtual_devices = [
        "//build/bazel/assembly/virtual_devices:arm64-emu-recommended",
        "//build/bazel/assembly/virtual_devices:arm64-emu-min",
        "//build/bazel/assembly/virtual_devices:arm64-emu-extra-large",
    ],
)

# vim3
fuchsia_product(
    name = "image.vim3",
    board_config = "//boards:vim3",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_eng",
    product_config = ":product_config",
)

fuchsia_elf_sizes(
    name = "elf_sizes.vim3",
    product = ":image.vim3",
)

fuchsia_product_bundle(
    name = "product_bundle.vim3",
    main = ":image.vim3",
    product_bundle_name = "core.vim3",
    recovery = "//products/zedboot:vim3_recovery",
    repository_keys = "//src/sys/pkg/repositories/devhost/keys",
    update_epoch = "1",
)

## core_with_f2fs targets

fuchsia_product_configuration(
    name = "product_config_f2fs",
    base_packages = BASE_PACKAGES,
    cache_packages = CACHE_PACKAGES,
    product_config_json = {
        "platform": PLATFORM_BASE | {
            "storage": {
                "mutable_storage_garbage_collection": True,
                "filesystems": {
                    "volume": {
                        "fvm": {
                            "data": {
                                "data_filesystem_format": "f2fs",
                            },
                            "blob": {},
                        },
                    },
                },
            },
        },
        "product": PRODUCT_BASE,
    },
    version = build_info_version,
)

# x64-f2fs
fuchsia_product(
    name = "image_f2fs.x64",
    board_config = "//boards:x64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_eng",
    product_config = ":product_config_f2fs",
)

fuchsia_elf_sizes(
    name = "elf_sizes_f2fs.x64",
    product = ":image_f2fs.x64",
)

fuchsia_product_bundle(
    name = "product_bundle_f2fs.x64",
    default_virtual_device = "//build/bazel/assembly/virtual_devices:x64-emu-recommended",
    main = ":image_f2fs.x64",
    product_bundle_name = "core_with_f2fs.x64",
    recovery = "//products/zedboot:x64",
    repository_keys = "//src/sys/pkg/repositories/devhost/keys",
    update_epoch = "1",
    virtual_devices = [
        "//build/bazel/assembly/virtual_devices:x64-emu-recommended",
        "//build/bazel/assembly/virtual_devices:x64-emu-min",
        "//build/bazel/assembly/virtual_devices:x64-emu-extra-large",
    ],
)

# arm64-f2fs
fuchsia_product(
    name = "image_f2fs.arm64",
    board_config = "//boards:arm64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_eng",
    product_config = ":product_config_f2fs",
)

fuchsia_elf_sizes(
    name = "elf_sizes_f2fs.arm64",
    product = ":image_f2fs.arm64",
)

fuchsia_product_bundle(
    name = "product_bundle_f2fs.arm64",
    default_virtual_device = "//build/bazel/assembly/virtual_devices:arm64-emu-recommended",
    main = ":image_f2fs.arm64",
    product_bundle_name = "core_with_f2fs.arm64",
    recovery = "//products/zedboot:arm64",
    repository_keys = "//src/sys/pkg/repositories/devhost/keys",
    update_epoch = "1",
    virtual_devices = [
        "//build/bazel/assembly/virtual_devices:arm64-emu-recommended",
        "//build/bazel/assembly/virtual_devices:arm64-emu-min",
        "//build/bazel/assembly/virtual_devices:arm64-emu-extra-large",
    ],
)

## core_with_minfs targets

fuchsia_product_configuration(
    name = "product_config_minfs",
    base_packages = BASE_PACKAGES,
    cache_packages = CACHE_PACKAGES,
    product_config_json = {
        "platform": PLATFORM_BASE | {
            "storage": {
                "mutable_storage_garbage_collection": True,
                "filesystems": {
                    "volume": {
                        "fvm": {
                            "data": {
                                "data_filesystem_format": "minfs",
                            },
                            "blob": {},
                        },
                    },
                },
            },
        },
        "product": PRODUCT_BASE,
    },
    version = build_info_version,
)

# x64-minfs
fuchsia_product(
    name = "image_minfs.x64",
    board_config = "//boards:x64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_eng",
    product_config = ":product_config_minfs",
)

fuchsia_elf_sizes(
    name = "elf_sizes_minfs.x64",
    product = ":image_minfs.x64",
)

fuchsia_product_size_check(
    name = "size_limits_minfs.x64",
    blobfs_creep_limit = 102400,
    platform_resources_budget = 8013047,
    product_image = ":image_minfs.x64",
)

fuchsia_size_report_aggregator(
    name = "size_report_aggregator_minfs.x64",
    size_reports = [":size_limits_minfs.x64"],
)

fuchsia_product_bundle(
    name = "product_bundle_minfs.x64",
    default_virtual_device = "//build/bazel/assembly/virtual_devices:x64-emu-recommended",
    main = ":image_minfs.x64",
    product_bundle_name = "core_with_minfs.x64",
    recovery = "//products/zedboot:x64",
    repository_keys = "//src/sys/pkg/repositories/devhost/keys",
    update_epoch = "1",
    virtual_devices = [
        "//build/bazel/assembly/virtual_devices:x64-emu-recommended",
        "//build/bazel/assembly/virtual_devices:x64-emu-min",
        "//build/bazel/assembly/virtual_devices:x64-emu-extra-large",
    ],
)

# arm64-minfs
fuchsia_product(
    name = "image_minfs.arm64",
    board_config = "//boards:arm64",
    platform_artifacts = "//build/bazel/assembly/assembly_input_bundles:platform_eng",
    product_config = ":product_config_minfs",
)

fuchsia_elf_sizes(
    name = "elf_sizes_minfs.arm64",
    product = ":image_minfs.arm64",
)

fuchsia_product_size_check(
    name = "size_limits_minfs.arm64",
    blobfs_creep_limit = 102400,
    platform_resources_budget = 8013047,
    product_image = ":image_minfs.arm64",
)

fuchsia_size_report_aggregator(
    name = "size_report_aggregator_minfs.arm64",
    size_reports = [":size_limits_minfs.arm64"],
)

fuchsia_product_bundle(
    name = "product_bundle_minfs.arm64",
    default_virtual_device = "//build/bazel/assembly/virtual_devices:arm64-emu-recommended",
    main = ":image_minfs.arm64",
    product_bundle_name = "core_with_minfs.arm64",
    recovery = "//products/zedboot:arm64",
    repository_keys = "//src/sys/pkg/repositories/devhost/keys",
    update_epoch = "1",
    virtual_devices = [
        "//build/bazel/assembly/virtual_devices:arm64-emu-recommended",
        "//build/bazel/assembly/virtual_devices:arm64-emu-min",
        "//build/bazel/assembly/virtual_devices:arm64-emu-extra-large",
    ],
)
