# Copyright 2022 The Fuchsia Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/assembly/product_assembly_configuration.gni")
import("//build/bazel/assembly/bazel_product_bundle.gni")
import("//build/info/info.gni")
import("//products/core/core_bazel_inputs.gni")

assert(
    is_fuchsia,
    "Product definitions and assemblies should only be defined in the fuchsia toolchain")

# This is the base platform configuration used by core
_platform_configuration_base = {
  build_type = "eng"

  kernel = {
    scheduler_enable_new_wakeup_accounting = true
  }

  bluetooth = {
    type = "standard"
    snoop = "lazy"
  }

  # Include sl4f on all core products until tests transition to other APIs.
  development_support = {
    include_sl4f = true

    tools = {
      audio = {
        driver_tools = true
        full_stack_tools = true
      }
      connectivity = {
        enable_networking = true
        enable_wlan = true
        enable_thread = true
      }
    }
  }

  fonts = {
    # See base_packages below.
    font_collection = "small-open-fonts-collection"
  }

  media = {
    audio = {
      full_stack = {
      }
    }
    enable_codecs = true
    enable_sessions = true
  }

  power = {
    enable_non_hermetic_testing = true
  }

  setui = {
  }

  storage = {
  }

  ui = {
    supported_input_devices = [
      "button",
      "touchscreen",
    ]
  }
}

_storage_f2fs = {
  storage = {
    mutable_storage_garbage_collection = true
    filesystems = {
      volume = {
        fvm = {
          data = {
            data_filesystem_format = "f2fs"
          }
          blob = {
          }
        }
      }
    }
  }
}

_storage_minfs = {
  storage = {
    mutable_storage_garbage_collection = true
    filesystems = {
      volume = {
        fvm = {
          data = {
            data_filesystem_format = "minfs"
          }
          blob = {
          }
        }
      }
    }
  }
}

_base_packages = [
  {
    # Provides font assets for `platform.fonts.font_collection` above.
    package_target = "//src/fonts/asset_providers:small-open-fonts-collection.asset-provider.package"
  },
]
_cache_packages = [
  {
    package_target = "//src/chromium:web_engine_pkg"
  },
]
_bazel_inputs = core_bazel_inputs

if (current_cpu == "x64") {
  bazel_product_bundle("product_bundle.x64") {
    testonly = true
    product_bundle_name = "core.x64"
    allow_eng_platform_bundle_use = true
    bazel_product_bundle_target = ":product_bundle.x64"
    bazel_product_image_target = ":image.x64"
    bazel_product_config_target = ":product_config"
    bazel_product_config_name = "core"
    bazel_recovery_image_target = "//products/zedboot:x64"
    bazel_elf_sizes_target = ":elf_sizes.x64"
    bazel_inputs_from_gn = _bazel_inputs + [ "//boards/x64:x64.bazel_input" ]
  }

  bazel_product_bundle("product_bundle.x64_reduced_perf_variation") {
    testonly = true
    product_bundle_name = "core.x64-reduced-perf-variation"
    allow_eng_platform_bundle_use = true
    bazel_product_bundle_target = ":product_bundle.x64_reduced_perf_variation"
    bazel_product_image_target = ":image.x64_reduced_perf_variation"
    bazel_recovery_image_target =
        "//products/zedboot:x64_reduced_perf_variation"
    bazel_elf_sizes_target = ":elf_sizes.x64_reduced_perf_variation"
    bazel_inputs_from_gn =
        _bazel_inputs + [ "//boards/x64:reduced_perf_variation.bazel_input" ]
  }
}

if (current_cpu == "arm64") {
  bazel_product_bundle("product_bundle.arm64") {
    testonly = true
    product_bundle_name = "core.arm64"
    allow_eng_platform_bundle_use = true
    bazel_product_bundle_target = ":product_bundle.arm64"
    bazel_product_image_target = ":image.arm64"
    bazel_product_config_target = ":product_config"
    bazel_product_config_name = "core"
    bazel_recovery_image_target = "//products/zedboot:arm64"
    bazel_elf_sizes_target = ":elf_sizes.arm64"
    bazel_inputs_from_gn =
        _bazel_inputs + [ "//boards/arm64:arm64.bazel_input" ]
  }

  bazel_product_bundle("product_bundle.qemu-arm64") {
    testonly = true
    product_bundle_name = "core.qemu-arm64"
    allow_eng_platform_bundle_use = true
    bazel_product_bundle_target = ":product_bundle.qemu-arm64"
    bazel_product_image_target = ":image.qemu-arm64"
    bazel_product_config_target = ":product_config"
    bazel_product_config_name = "core"
    bazel_recovery_image_target = "//products/zedboot:qemu-arm64"
    bazel_elf_sizes_target = ":elf_sizes.qemu-arm64"
    bazel_inputs_from_gn =
        _bazel_inputs + [ "//boards/qemu-arm64:qemu-arm64.bazel_input" ]
    image_use_vbmeta = false
  }

  bazel_product_bundle("product_bundle.vim3") {
    testonly = true
    product_bundle_name = "core.vim3"
    allow_eng_platform_bundle_use = true
    bazel_product_bundle_target = ":product_bundle.vim3"
    bazel_product_image_target = ":image.vim3"
    bazel_product_config_target = ":product_config"
    bazel_product_config_name = "core"
    bazel_recovery_image_target = "//products/zedboot:vim3_recovery"
    bazel_elf_sizes_target = ":elf_sizes.vim3"
    bazel_inputs_from_gn = _bazel_inputs + [ "//boards/vim3:bazel_inputs" ]
  }
}

product_assembly_configuration("core_with_f2fs") {
  testonly = true
  platform = {
    forward_variables_from(_platform_configuration_base, "*")
    forward_variables_from(_storage_f2fs, "*")
  }
  product = {
    build_info = default_product_build_info
  }

  base_packages = _base_packages
  cache_packages = _cache_packages
  deps = [ "//build/info:build_info_files" ]
  version = build_info_version
}

product_assembly_configuration("core_with_minfs") {
  testonly = true
  platform = {
    forward_variables_from(_platform_configuration_base, "*")
    forward_variables_from(_storage_minfs, "*")
  }
  product = {
    build_info = default_product_build_info
  }

  base_packages = _base_packages
  cache_packages = _cache_packages
  deps = [ "//build/info:build_info_files" ]
  version = build_info_version
}
