# Copyright 2022 The Fuchsia Authors.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/bazel/assembly/bazel_product_bundle.gni")
import("//build/info/info.gni")
import("//products/core/core_bazel_inputs.gni")

assert(
    is_fuchsia,
    "Product definitions and assemblies should only be defined in the fuchsia toolchain")

_bazel_inputs = core_bazel_inputs

group("core") {
  testonly = true
  deps = []
  if (current_cpu == "x64") {
    deps += [
      ":product_bundle.x64",
      ":product_bundle.x64_reduced_perf_variation",
      ":product_bundle_f2fs.x64",
      ":product_bundle_minfs.x64",
    ]
  } else if (current_cpu == "arm64") {
    deps += [
      ":product_bundle.arm64",
      ":product_bundle_f2fs.arm64",
      ":product_bundle_minfs.arm64",
    ]
  }
}
if (current_cpu == "x64") {
  bazel_product_bundle("product_bundle.x64") {
    testonly = true
    product_bundle_name = "core.x64"

    bazel_product_bundle_target = ":product_bundle.x64"
    bazel_product_image_target = ":image.x64"
    bazel_product_config_target = ":product_config"
    bazel_product_config_name = "core"
    bazel_recovery_image_target = "//products/zedboot:x64"
    bazel_elf_sizes_target = ":elf_sizes.x64"
    bazel_inputs_from_gn = _bazel_inputs + [ "//boards/x64:x64.bazel_input" ]
  }

  bazel_product_bundle("product_bundle.x64_reduced_perf_variation") {
    testonly = true
    product_bundle_name = "core.x64-reduced-perf-variation"

    bazel_product_bundle_target = ":product_bundle.x64_reduced_perf_variation"
    bazel_product_image_target = ":image.x64_reduced_perf_variation"
    bazel_recovery_image_target =
        "//products/zedboot:x64_reduced_perf_variation"
    bazel_elf_sizes_target = ":elf_sizes.x64_reduced_perf_variation"
    bazel_inputs_from_gn =
        _bazel_inputs + [ "//boards/x64:reduced_perf_variation.bazel_input" ]
  }

  bazel_product_bundle("product_bundle_f2fs.x64") {
    testonly = true
    product_bundle_name = "core_with_f2fs.x64"

    bazel_product_bundle_target = ":product_bundle_f2fs.x64"
    bazel_product_image_target = ":image_f2fs.x64"
    bazel_product_config_target = ":product_config_f2fs"
    bazel_product_config_name = "core"
    bazel_recovery_image_target = "//products/zedboot:x64"
    bazel_elf_sizes_target = ":elf_sizes_f2fs.x64"
    bazel_inputs_from_gn = _bazel_inputs + [ "//boards/x64:x64.bazel_input" ]
    image_has_fxfs_blob = false
  }

  bazel_product_bundle("product_bundle_minfs.x64") {
    testonly = true
    product_bundle_name = "core_with_minfs.x64"

    bazel_product_bundle_target = ":product_bundle_minfs.x64"
    bazel_product_image_target = ":image_minfs.x64"
    bazel_product_config_target = ":product_config_minfs"
    bazel_product_config_name = "core"
    bazel_recovery_image_target = "//products/zedboot:x64"
    bazel_elf_sizes_target = ":elf_sizes_minfs.x64"
    bazel_product_size_check_target = ":size_limits_minfs.x64"
    bazel_size_report_aggregator_target = ":size_report_aggregator_minfs.x64"
    bazel_inputs_from_gn = _bazel_inputs + [ "//boards/x64:x64.bazel_input" ]
    image_has_fxfs_blob = false
  }
}

if (current_cpu == "arm64") {
  bazel_product_bundle("product_bundle.arm64") {
    testonly = true
    product_bundle_name = "core.arm64"

    bazel_product_bundle_target = ":product_bundle.arm64"
    bazel_product_image_target = ":image.arm64"
    bazel_product_config_target = ":product_config"
    bazel_product_config_name = "core"
    bazel_recovery_image_target = "//products/zedboot:arm64"
    bazel_elf_sizes_target = ":elf_sizes.arm64"
    bazel_inputs_from_gn =
        _bazel_inputs + [ "//boards/arm64:arm64.bazel_input" ]
  }

  bazel_product_bundle("product_bundle.qemu-arm64") {
    testonly = true
    product_bundle_name = "core.qemu-arm64"

    bazel_product_bundle_target = ":product_bundle.qemu-arm64"
    bazel_product_image_target = ":image.qemu-arm64"
    bazel_product_config_target = ":product_config"
    bazel_product_config_name = "core"
    bazel_recovery_image_target = "//products/zedboot:qemu-arm64"
    bazel_elf_sizes_target = ":elf_sizes.qemu-arm64"
    bazel_inputs_from_gn =
        _bazel_inputs + [ "//boards/qemu-arm64:qemu-arm64.bazel_input" ]
    image_use_vbmeta = false
  }

  bazel_product_bundle("product_bundle.vim3") {
    testonly = true
    product_bundle_name = "core.vim3"

    bazel_product_bundle_target = ":product_bundle.vim3"
    bazel_product_image_target = ":image.vim3"
    bazel_product_config_target = ":product_config"
    bazel_product_config_name = "core"
    bazel_recovery_image_target = "//products/zedboot:vim3_recovery"
    bazel_elf_sizes_target = ":elf_sizes.vim3"
    bazel_inputs_from_gn = _bazel_inputs + [ "//boards/vim3:bazel_inputs" ]
  }

  bazel_product_bundle("product_bundle_f2fs.arm64") {
    testonly = true
    product_bundle_name = "core_with_f2fs.arm64"

    bazel_product_bundle_target = ":product_bundle_f2fs.arm64"
    bazel_product_image_target = ":image_f2fs.arm64"
    bazel_product_config_target = ":product_config_f2fs"
    bazel_product_config_name = "core"
    bazel_recovery_image_target = "//products/zedboot:arm64"
    bazel_elf_sizes_target = ":elf_sizes_f2fs.arm64"
    bazel_inputs_from_gn =
        _bazel_inputs + [ "//boards/arm64:arm64.bazel_input" ]
    image_has_fxfs_blob = false
  }

  bazel_product_bundle("product_bundle_minfs.arm64") {
    testonly = true
    product_bundle_name = "core_with_minfs.arm64"

    bazel_product_bundle_target = ":product_bundle_minfs.arm64"
    bazel_product_image_target = ":image_minfs.arm64"
    bazel_product_config_target = ":product_config_minfs"
    bazel_product_config_name = "core"
    bazel_recovery_image_target = "//products/zedboot:arm64"
    bazel_elf_sizes_target = ":elf_sizes_minfs.arm64"
    bazel_product_size_check_target = ":size_limits_minfs.arm64"
    bazel_size_report_aggregator_target = ":size_report_aggregator_minfs.arm64"
    bazel_inputs_from_gn =
        _bazel_inputs + [ "//boards/arm64:arm64.bazel_input" ]
    image_has_fxfs_blob = false
  }
}
